--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -166,9 +166,6 @@
         .bb {border-bottom: 1px solid #e0e0e0;}
         .br {border-right: 1px solid #e0e0e0;}
 
-
-
-
         .swipe {
             overflow: hidden;
             visibility: hidden;
@@ -185,14 +182,11 @@
             width: 100%;
             position: relative;
         }
-
         .sliderow {text-align: center;width: 100%;display: block;}
         /*.slidepanel .sliderow {margin-top: 10px;}*/
         .sliderow .slidecol {float:left;width: 25%;}
         .sliderow .slidecol img {width: 60%;margin-top: 10px;}
         .sliderow .slidecol div {font-size: 13px; margin-top: 5px;}
-
-
     </style>
 </head>
 <body>
@@ -205,13 +199,8 @@
         </div>
     </div>
 
-
     <div id="main" style="padding:0px;width:100%;height:100%;border:0px;">
-
-
-
     </div>
-
     <div id="footer">
         <ul>
             <li tapmode="activebtn0 activebtn">
@@ -237,24 +226,16 @@
 <script type="text/javascript" src="/static/script/swipe.js"></script>
 <script type="text/javascript" src="/static/script/jquery.min.js"></script>
 <script type="text/javascript" src="/static/script/bootstrap.js"></script>
-
-
 <script type="text/javascript">
-
     jQuery(document).ready(function() {
         var g_currentUser = null;
-
-
-
-
-
         //获取当前用户的信息
         $.ajax({
             type:"POST",
             contentType:"application/json;charset=utf-8",
             url:"/user/getcurrentuser",
             success:function(data){
-                  if(data.status == "success"){
+                  if(data.status === "success"){
                       if(data.data == null){
                           g_currentUser = null;
                       }else{
@@ -274,7 +255,6 @@
             }
         });
 
-
         $("#rightTitle").on("click",function(){
             if(g_currentUser == null){
                 window.location.href="/static/login.html";
@@ -284,7 +264,7 @@
                     contentType:"application/json;charset=utf-8",
                     url:"/user/logout",
                     success:function(data){
-                        if(data.status == "success"){
+                        if(data.status === "success"){
                             window.location.href="/static/index.html";
                         }else{
                             alert("请求失败,原因为"+data.data.errMsg);
@@ -297,8 +277,6 @@
             }
             return false;
         });
-
-
 
     });
 </script>
