--- a/src/main/resources/static/register.html
+++ b/src/main/resources/static/register.html
@@ -177,7 +177,7 @@
                     "gender":gender
                 }),
                 success:function(data){
-                    if(data.status == "success"){
+                    if(data.status === "success"){
                         alert("注册成功");
                         window.location.href="/static/login.html";
                     }else{
